--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "server/main.js",
   "dependencies": {
-    "body-parser": "^1.18.3",
     "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "greenlock-express": "^2.1.6",
     "mongodb": "^3.0.10",
     "mongoose": "^5.1.6"
   },
